[package]
name = "grid_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70" 
glam = "0.23.0"
glam_rect = { version = "0.1.0", path = "../glam_rect" }  
image = { version = "0.23", default-features = false }

log = "0.4"
speedy2d = { version = "1.13.3", path = "../kirinokirino/Speedy2D", features = ["image-loading"]}
confargenv = { version = "*", git = "https://github.com/kirinokirino/confargenv" }
hyper = { version = "0.14", features = ["runtime", "server", "http1", "stream"] }
tokio = { version = "1", features = ["rt", "net"] }
futures = "0.3"
